# SimpleCutter

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  cut.cc  cut.h  dict.txt  main.cc  piece.txt  pyproject.toml
conv/: convert.py  extract-redirects.py
data/: .gitignore  Makefile  fetch_finewiki.py  fetch_wikinews.py  process.py  split_sentences.py
dict/: .gitignore  Makefile  README.md  build_lexicon.py  count_chars.cc  dict.txt  filter.py
paper/: iscut.tex
python/iscut/: __init__.py
python/ismacut/: __init__.py
scripts/: Makefile  count_chars.cc  cut.py  filter_dict.py  run_em.sh  train.sh
src/: count.cc  count.h  cut.cc  cut.h  main.cc  piece.cc  piece.h  pip.cc  segment.cc  segment.h  test.cc  trie.h  ustr.cc  ustr.h
