[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "ismacut"
version = "0.1.0"
description = "Chinese word segmentation based on Double-Array Trie"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.build-type = "Release"
